add card incompleate

--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
         <section class="article">
             <div class="container">
                 <div class="article-card">
-                    <div class="article-body">
-                        <img src="./img/1.webp" alt="card">
-                    </div>
-                    <div class="article-description">
-                        <p class="brand">Levi's</p>
-                        <p class="description">RELAXED FIT TEE UNISEX</p>
-                        <p class="price">14,99&#8364; <s class="barred-price">29,99&#8364;</s></p>
-                    </div>
-                    <div class="card-discount">
-                        <div>
-                            <p class="discount"><b>-50%<b></p>
-                        </div>
-                        <div>
-                            <p class="punto-forte"><b>sostenibilità</b></p> 
-                        </div>                
-                    </div> 
-                </div>     
+                <div class="article-body">
+                <img src="./img/1.webp" alt="card">
+                </div>
+                <div class="article-description">
+                 <p class="brand">Levi's</p>
+                 <p class="description">RELAXED FIT TEE UNISEX</p>
+                 <p class="price">14,99&#8364; <s class="barred-price">29,99&#8364;</s></p>
+                </div>
+                <div class="card-discount">
+                 <div>
+                    <p class="discount"><b>-50%</b></p>
+                 </div>
+                 <div>
+                    <p class="punto-forte"><b>sostenibilità</b></p> 
+                 </div>                
+                </div> 
+                
+
             </div>
                 <div class="article-card"></div>
                 <div class="article-card"></div>
