add first-sixth card incompleate

--- a/index.html
+++ b/index.html
@@ -12,31 +12,124 @@
     <main>
         <section class="article">
             <div class="container">
+                <!-- Article-card container, first card -->
                 <div class="article-card">
-                <div class="article-body">
-                <img src="./img/1.webp" alt="card">
+                    <div class="article-body">
+                     <img src="./img/1.webp" alt="card">
+                    </div>
+                    <div class="article-description">
+                        <p class="brand">Levi's</p>
+                        <p class="description">RELAXED FIT TEE UNISEX</p>
+                        <p class="price">14,99&#8364; <s class="barred-price">29,99&#8364;</s></p>
+                    </div>
+                    <div class="card-discount">
+                        <div>
+                            <p class="discount"><b>-50%</b></p>
+                        </div>
+                        <div>
+                            <p class="punto-forte"><b>Sostenibilità</b></p> 
+                        </div>                
+                    </div>               
                 </div>
-                <div class="article-description">
-                 <p class="brand">Levi's</p>
-                 <p class="description">RELAXED FIT TEE UNISEX</p>
-                 <p class="price">14,99&#8364; <s class="barred-price">29,99&#8364;</s></p>
+                <!-- Article-card container, second card -->
+                <div class="article-card">
+                    <div class="article-body">
+                        <img src="img/2.webp" alt="card">
+                    </div>
+                       <div class="article-description">
+                           <p class="brand">Guess</p>
+                           <p class="description">ROSES TEE</p>
+                           <p class="price">20,99&#8364; <s class="barred-price">29,99&#8364;</s></p>
+                       </div>
+                       <div class="card-discount">
+                           <div>
+                               <p class="discount"><b>-30%</b></p>
+                           </div>
+                           <!-- <div>  
+                               <p class="punto-forte"><b>Sostenibilità</b></p> 
+                           </div>  -->              
+                        </div>
                 </div>
-                <div class="card-discount">
-                 <div>
-                    <p class="discount"><b>-50%</b></p>
-                 </div>
-                 <div>
-                    <p class="punto-forte"><b>sostenibilità</b></p> 
-                 </div>                
-                </div> 
-                
-
-            </div>
-                <div class="article-card"></div>
-                <div class="article-card"></div>
-                <div class="article-card"></div>
-                <div class="article-card"></div>
-                <div class="article-card"></div>
+                <!-- Article card container, third card -->
+                <div class="article-card">
+                    <div class="article-body">
+                        <img src="img/3.webp" alt="card">
+                    </div>
+                       <div class="article-description">
+                           <p class="brand">Come Zucchero Filato</p>
+                           <p class="description">VOGLIA DI COLORI PASTELLO</p>
+                           <p class="price">129,99&#8364; <s class="barred-price">184,99&#8364;</s></p>
+                       </div>
+                       <div class="card-discount">
+                           <div>
+                               <p class="discount"><b>-50%</b></p>
+                           </div>
+                           <!-- <div> 
+                               <p class="punto-forte"><b>Sostenibilità</b></p> 
+                           </div>   -->             
+                        </div>
+                </div>
+                <!-- article card container, fourth card -->
+                <div class="article-card">
+                    <div class="article-body">
+                        <img src="./img/4.webp" alt="card">
+                    </div>
+                       <div class="article-description">
+                           <p class="brand">Levi's</p>
+                           <p class="description">TEE UNISEX</p>
+                           <p class="price">14,99&#8364; <s class="barred-price">29,99&#8364;</s></p>
+                       </div>
+                       <div class="card-discount">
+                           <div>
+                               <p class="discount"><b>-50%</b></p>
+                           </div>
+                           <div>
+                               <p class="punto-forte"><b>Sostenibilità</b></p> 
+                           </div>                
+                        </div>
+                </div>
+                <!-- article card container fifth card -->
+                <div class="article-card">
+                    <div class="article-body">
+                        <img src="./img/5.webp" alt="card">
+                    </div>
+                       <div class="article-description">
+                           <p class="brand">Maya Deluxe</p>
+                           <p class="description">STRIPE BODICE</p>
+                           <!--  -->
+                           <p class="price">99,99&#8364; <!-- <s class="barred-price">29,99&#8364;</s> --></p>
+                       </div>
+                       <!--  
+                       <div class="card-discount">
+                           <div>
+                               <p class="discount"><b>-50%</b></p>
+                           </div>
+                           <div>
+                               <p class="punto-forte"><b>Sostenibilità</b></p> 
+                           </div>                
+                        </div> -->
+                </div>
+                <!-- article card container sixth card -->
+                <div class="article-card">
+                    <div class="article-body">
+                        <img src="./img/6.webp" alt="card">
+                    </div>
+                       <div class="article-description">
+                           <p class="brand">Espirit</p>
+                           <p class="description">MAGLIONE-BLACK</p>
+                           <p class="price">29,99&#8364; <!-- <s class="barred-price">29,99&#8364;</s>  --></p>
+                       </div>
+                       <div class="card-discount">
+                        <!--
+                           <div>
+                               <p class="discount"><b>-50%</b></p>
+                           </div>
+                            -->
+                           <div>
+                               <p class="punto-forte"><b>Sostenibilità</b></p> 
+                           </div>                
+                        </div>
+                </div>
                 
             </div>
         </section>
